--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Sun Feb 19 2017 17:46:59 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Feb 19 2017 17:29:50 GMT+0000 (UTC)  -->
 <html data-wf-page="589d24e414809b9102355c68" data-wf-site="589d24e314809b9102355c65">
 <head>
   <meta charset="utf-8">
@@ -39,7 +39,7 @@
     <div class="container w-container">
       <h1 class="title">Wildcat Correction</h1>
       <p class="subtitle">Interested in student organizations but not sure where to start? Take our survey for some recommendations!</p>
-    </div><a class="firstpage resultbutton w-button" data-ix="display-none-on-load" href="results.html">Get Your Results</a>
+    </div><button class="firstbutton" href="survey.html">Survey</button>
   </div>
   <div class="footer-section">
     <div class="w-container">
