--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container w-container">
       <h1 class="title">Wildcat Correction</h1>
       <p class="subtitle">Interested in student organizations but not sure where to start? Take our survey for some recommendations!</p>
-    </div><button class="firstbutton" href="survey.html">Survey</button>
+    </div><a href="survey.html"><button href="survey.html" class="cent w-button" id="firstbutton" >Survey</button></a>
   </div>
   <div class="footer-section">
     <div class="w-container">
