--- a/survey.html
+++ b/survey.html
@@ -41,7 +41,7 @@
       <div class="surveyembed">
       <iframe src="https://eecs330typeform.typeform.com/to/G2GUkW" height="350em" width="100%"></iframe>
     </div>
-    </div><button class="surveybutton" href="results.html">Get your Results!</button>
+      </div><a href="results.html"><button class="surveybutton" href="results.html">Get your Results!</button></a>
   </div>
   <div class="footer-section">
     <div class="w-container">
